Add animation in projects filter

--- a/projects.html
+++ b/projects.html
@@ -71,16 +71,16 @@
 
                 <div class="page__filter">
                     <div class="section-wrapper">
-                        <nav>
-                            <ul>
-                                <li> All </li>
-                                <li> Education </li>
-                                <li> Offices </li>
-                                <li> Residential </li>
-                                <li> Resort </li>
-                                <li> Interior </li>
-                                <li> Urban </li>
-                                <li> Healthcare</li>
+                        <nav class="filter filter__navigation">
+                            <ul class="filter__navigation-list">
+                                <li data-filter="all" class="filter__all"> All </li>
+                                <li data-filter="educcation" class="filter__educcation"> Education </li>
+                                <li data-filter="offices" class="filter__offices"> Offices </li>
+                                <li data-filter="residential" class="filter__residential"> Residential </li>
+                                <li data-filter="resort" class="filter__resort"> Resort </li>
+                                <li data-filter="interrior" class="filter__interrior"> Interior </li>
+                                <li data-filter="urban" class="filter__urban"> Urban </li>
+                                <li data-filter="healhcare" class="filter__healhcare"> Healthcare</li>
                             </ul>
                         </nav>
                     </div>
@@ -89,7 +89,7 @@
                 <div class="page__projects">
                     <div class="section-wrapper" id="project__wrapper">
                         <div class="project__wrapper">
-                            <div class="project__nszu project__content">
+                            <div class="project__nszu project__content offices">
                                 <div class="project__img">
                                     <img src="assets/pic/01_nszu/front-nszu.jpg" class="project__photo-hover">
                                     <img src="assets/pic/01_nszu/front-nszu-bw.jpg" class="project__photo">
@@ -99,7 +99,7 @@
                                     <p class="project__text"> National Health Service of Ukraine </p>
                                 </div>
                             </div>
-                            <div class="project__leleka project__content">
+                            <div class="project__leleka project__content healhcare">
                                 <div class="project__img">
                                     <img src="assets/pic/02_leleka/front-leleka.jpg" class="project__photo-hover">
                                     <img src="assets/pic/02_leleka/front-leleka-bw.jpg" class="project__photo">
@@ -109,7 +109,7 @@
                                     <p class="project__text"> Maternityhouse "Leleka"  </p>
                                 </div>
                             </div>
-                            <div class="project__aquapark project__content">
+                            <div class="project__aquapark project__content resort">
                                 <div class="project__img">
                                     <img src="assets/pic/03_aquapark/front-quapark.jpg" class="project__photo-hover">
                                     <img src="assets/pic/03_aquapark/front-aquapark-bw.jpg" class="project__photo">
@@ -119,7 +119,7 @@
                                     <p class="project__text"> Aquapark </p>
                                 </div>
                             </div>
-                            <div class="project__brovary project__content">
+                            <div class="project__brovary project__content educcation">
                                 <div class="project__img">
                                     <img src="assets/pic/04_school/front-school.jpg" class="project__photo-hover">
                                     <img src="assets/pic/04_school/front-school-bw.jpg" class="project__photo">
@@ -129,7 +129,7 @@
                                     <p class="project__text"> Secondary school </p>
                                 </div>
                             </div>
-                            <div class="project__nova-kakhovka project__content">
+                            <div class="project__nova-kakhovka project__content offices">
                                 <div class="project__img">
                                     <img src="assets/pic/05_nova_kakhovka/front-cnap.jpg" class="project__photo-hover">
                                     <img src="assets/pic/05_nova_kakhovka/front-cnap-bw.jpg" class="project__photo">
@@ -139,7 +139,7 @@
                                     <p class="project__text"> Center of Administrative Services </p>
                                 </div>
                             </div>
-                            <div class="project__zirochka project__content">
+                            <div class="project__zirochka project__content educcation">
                                 <div class="project__img">
                                     <img src="assets/pic/06_kindergarten_zirochka/front-zirochka.jpg" class="project__photo-hover">
                                     <img src="assets/pic/06_kindergarten_zirochka/front-zirochka-bw.jpg" class="project__photo">
@@ -149,7 +149,7 @@
                                     <p class="project__text"> Kindergarten "Zyrochka" </p>
                                 </div>
                             </div>
-                            <div class="project__boz project__content">
+                            <div class="project__boz project__content offices">
                                 <div class="project__img">
                                     <img src="assets/pic/07_boz/front-boz.jpg" class="project__photo-hover">
                                     <img src="assets/pic/07_boz/front-boz-bw.jpg" class="project__photo">
@@ -159,7 +159,7 @@
                                     <p class="project__text"> Business Center </p>
                                 </div>
                             </div>
-                            <div class="project__kmu project__content">
+                            <div class="project__kmu project__content educcation">
                                 <div class="project__img">
                                     <img src="assets/pic/08_kmu/front-kmu.jpg" class="project__photo-hover">
                                     <img src="assets/pic/08_kmu/front-kmu-bw.jpg" class="project__photo">
@@ -169,7 +169,7 @@
                                     <p class="project__text"> Kyiv Medical University </p>
                                 </div>
                             </div>
-                            <div class="project__bandery project__content">
+                            <div class="project__bandery project__content offices">
                                 <div class="project__img">
                                     <img src="assets/pic/09_bandery_11/front-bandery-11.jpg" class="project__photo-hover">
                                     <img src="assets/pic/09_bandery_11/front-bandery-11-bw.jpg" class="project__photo">
@@ -179,7 +179,7 @@
                                     <p class="project__text"> Administrative and Production complex </p>
                                 </div>
                             </div>
-                            <div class="project__cherkasska project__content">
+                            <div class="project__cherkasska project__content residential">
                                 <div class="project__img">
                                     <img src="assets/pic/10_cherkasska/front-cherkasska.jpg" class="project__photo-hover">
                                     <img src="assets/pic/10_cherkasska/front-cherkasska-bw.jpg" class="project__photo">
@@ -189,7 +189,7 @@
                                     <p class="project__text"> Dwelling house in Kyiv </p>
                                 </div>
                             </div>
-                            <div class="project__cherkasska-shk project__content">
+                            <div class="project__cherkasska-shk project__content residential">
                                 <div class="project__img">
                                     <img src="assets/pic/11_cherkasska-shk/front-cherkasska-shk.jpg" class="project__photo-hover">
                                     <img src="assets/pic/11_cherkasska-shk/front-cherkasska-shk-bw.jpg" class="project__photo">
@@ -199,7 +199,7 @@
                                     <p class="project__text"> Residential complex in Cherkasy </p>
                                 </div>
                             </div>
-                            <div class="project__port-mykolaiv project__content">
+                            <div class="project__port-mykolaiv project__content urban">
                                 <div class="project__img">
                                     <img src="assets/pic/12_port-mykolaiv/front-port.jpg" class="project__photo-hover">
                                     <img src="assets/pic/12_port-mykolaiv/front-port-bw.jpg" class="project__photo">
@@ -209,7 +209,7 @@
                                     <p class="project__text"> River station in Mykolaiv </p>
                                 </div>
                             </div>                            
-                            <div class="project__lectorium project__content">
+                            <div class="project__lectorium project__content interrior">
                                 <div class="project__img">
                                     <img src="assets/pic/13_lectorium/front-lectorium.jpg" class="project__photo-hover">
                                     <img src="assets/pic/13_lectorium/front-lectorium-bw.jpg" class="project__photo">
@@ -219,7 +219,7 @@
                                     <p class="project__text"> Lectorium </p>
                                 </div>
                             </div>
-                            <div class="project__ilyinsky project__content">
+                            <div class="project__ilyinsky project__content interrior">
                                 <div class="project__img">
                                     <img src="assets/pic/14_ilyinsky/front-ilyinsky.jpg" class="project__photo-hover">
                                     <img src="assets/pic/14_ilyinsky/front-ilyinsky-bw.jpg" class="project__photo">
@@ -229,7 +229,7 @@
                                     <p class="project__text"> Office on Ilyinsky street </p>
                                 </div>
                             </div>
-                            <div class="project__ua-first project__content">
+                            <div class="project__ua-first project__content interrior">
                                 <div class="project__img">
                                     <img src="assets/pic/15_ua-first/front-ua-1.jpg" class="project__photo-hover">
                                     <img src="assets/pic/15_ua-first/front-ua-1-bw.jpg" class="project__photo">
@@ -239,7 +239,7 @@
                                     <p class="project__text"> UA-first news-house </p>
                                 </div>
                             </div>                            
-                            <div class="project__strumochok project__content">
+                            <div class="project__strumochok project__content residential">
                                 <div class="project__img">
                                     <img src="assets/pic/16_strumochok/front-strumochok.jpg" class="project__photo-hover">
                                     <img src="assets/pic/16_strumochok/front-strumochok-bw.jpg" class="project__photo">
@@ -249,7 +249,7 @@
                                     <p class="project__text"> Residential complex "Strumochok" </p>
                                 </div>
                             </div>
-                            <div class="project__pool-mykolaiv project__content">
+                            <div class="project__pool-mykolaiv project__content resort">
                                 <div class="project__img">
                                     <img src="assets/pic/17_pool-mykolaiv/front-pool-mykolaiv.jpg" class="project__photo-hover">
                                     <img src="assets/pic/17_pool-mykolaiv/front-pool-mykolaiv-bw.jpg" class="project__photo">
@@ -259,7 +259,7 @@
                                     <p class="project__text"> Sports and recreation facility in Mykolaiv </p>
                                 </div>
                             </div>
-                            <div class="project__furshet project__content">
+                            <div class="project__furshet project__content interrior">
                                 <div class="project__img">
                                     <img src="assets/pic/18_furshet/front-furchet.jpg" class="project__photo-hover">
                                     <img src="assets/pic/18_furshet/front-furchet-bw.jpg" class="project__photo">
@@ -269,7 +269,7 @@
                                     <p class="project__text"> "Furshet" store chain </p>
                                 </div>
                             </div>
-                            <div class="project__fontanska project__content">
+                            <div class="project__fontanska project__content residential">
                                 <div class="project__img">
                                     <img src="assets/pic/19_fontanska/front-fontanska.jpg" class="project__photo-hover">
                                     <img src="assets/pic/19_fontanska/front-fontanska-bw.jpg" class="project__photo">
@@ -328,5 +328,6 @@
 
     <script>includeHTML()</script> <!-- Import parts of page HTML -->
     <script src="assets/js/burger.js" ></script> <!-- Import Burger menu -->  
+    <script src="assets/js/projects-filter.js" ></script> <!-- Import projects filter -->  
 </body>
 </html>
