Make projects list like grid instead of flex

--- a/projects.html
+++ b/projects.html
@@ -279,7 +279,7 @@
                                     <p class="project__text"> Dwelling house in Odesa </p>
                                 </div>
                             </div>
-                            <div class="project__hiden project__content">                                                               
+                            <!-- <div class="project__hiden project__content">                                                               
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
                                     <p class="project__text project__photo-hiden"> Hiden </p>
@@ -290,7 +290,7 @@
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
                                     <p class="project__text project__photo-hiden"> Hiden </p>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>                        
                     </div>
                 </div>                
