Make team menu like grid instead of flex

--- a/HTML-snippets/team.html
+++ b/HTML-snippets/team.html
@@ -34,7 +34,7 @@
         <p class="emp-block__name"> Viacheslav Sukhinov </p>
         <p class="emp-block__position"> Architect </p>
     </div>
-    <div class="emp-block emp-block-hiden481">
+    <!-- <div class="emp-block emp-block-hiden481">
         <img src="assets/images/projects/00_general/team.jpg" alt="" class="emp-block__photo">
         <p class="emp-block__name"> Lorem Ipsum </p>
         <p class="emp-block__position"> Architect </p>
@@ -43,7 +43,7 @@
         <img src="assets/images/projects/00_general/team.jpg" alt="" class="emp-block__photo">
         <p class="emp-block__name"> Lorem Ipsum </p>
         <p class="emp-block__position"> Architect </p>
-    </div>
+    </div> -->
 </div>
 <!-- <div class="about-us__container"> 
     <div class="emp-block">
