Fixed projects filter. Add another way to filter

--- a/projects.html
+++ b/projects.html
@@ -73,14 +73,14 @@
                     <div class="section-wrapper">
                         <nav class="filter filter__navigation">
                             <ul class="filter__navigation-list">
-                                <li data-filter="all" class="filter__all"> All </li>
-                                <li data-filter="educcation" class="filter__educcation"> Education </li>
-                                <li data-filter="offices" class="filter__offices"> Offices </li>
-                                <li data-filter="residential" class="filter__residential"> Residential </li>
-                                <li data-filter="resort" class="filter__resort"> Resort </li>
-                                <li data-filter="interrior" class="filter__interrior"> Interior </li>
-                                <li data-filter="urban" class="filter__urban"> Urban </li>
-                                <li data-filter="healhcare" class="filter__healhcare"> Healthcare</li>
+                                <li data-filter="all" class="filter__btn filter__all"> All </li>
+                                <li data-filter="educcation" class="filter__btn filter__educcation"> Education </li>
+                                <li data-filter="offices" class="filter__btn filter__offices"> Offices </li>
+                                <li data-filter="residential" class="filter__btn filter__residential"> Residential </li>
+                                <li data-filter="resort" class="filter__btn filter__resort"> Resort </li>
+                                <li data-filter="interrior" class="filter__btn filter__interrior"> Interior </li>
+                                <li data-filter="urban" class="filter__btn filter__urban"> Urban </li>
+                                <li data-filter="healhcare" class="filter__btn filter__healhcare"> Healthcare</li>
                             </ul>
                         </nav>
                     </div>
