--- a/projects.html
+++ b/projects.html
@@ -70,8 +70,17 @@
             <div class="page__container">
 
                 <div class="page__filter">
-                    <div class="section-wrapper">
-                        <nav class="filter filter__navigation">
+                    <div class="section-wrapper filter">
+                        <div class="menu__filter">
+                            <span class="arrow-icon"> 
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                                    <path d="M224 416c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L224 338.8l169.4-169.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-192 192C240.4 412.9 232.2 416 224 416z"/>
+                                </svg>
+                            </span>
+                            <span class="arrow-text"> Filter </span>
+                            
+                        </div>
+                        <nav class=" filter__navigation">
                             <ul class="filter__navigation-list">
                                 <li data-filter="all" class="filter__btn filter__all"> All </li>
                                 <li data-filter="educcation" class="filter__btn filter__educcation"> Education </li>
@@ -329,5 +338,6 @@
     <script>includeHTML()</script> <!-- Import parts of page HTML -->
     <script src="assets/js/burger.js" ></script> <!-- Import Burger menu -->  
     <script src="assets/js/projects-filter.js" ></script> <!-- Import projects filter -->  
+    <script src="assets/js/filter-menu.js" ></script> <!-- Import projects filter menu -->  
 </body>
 </html>
