--- a/projects.html
+++ b/projects.html
@@ -77,12 +77,12 @@
                                     <path d="M224 416c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L224 338.8l169.4-169.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-192 192C240.4 412.9 232.2 416 224 416z"/>
                                 </svg>
                             </span>
-                            <span class="arrow-text"> Filter </span>
+                            <span class="arrow-text"> All projects  </span>
                             
                         </div>
                         <nav class=" filter__navigation">
                             <ul class="filter__navigation-list">
-                                <li data-filter="all" class="filter__btn filter__all"> All </li>
+                                <li data-filter="all projects" class="filter__btn filter__all"> All projects </li>
                                 <li data-filter="educcation" class="filter__btn filter__educcation"> Education </li>
                                 <li data-filter="offices" class="filter__btn filter__offices"> Offices </li>
                                 <li data-filter="residential" class="filter__btn filter__residential"> Residential </li>
