Small changes in main page: deleted buttons, added section titles, made projects subtitles lowercase

--- a/index.html
+++ b/index.html
@@ -74,6 +74,19 @@
 
                 <div class="page__projects scroll-section" id="page__projects">
                     <div class="section-wrapper" >
+                        <div class="section__title">
+                            <h2 class="title">Projects</h2>
+                            <div class="icon">
+                                <a href="projects.html" class="title__more-btn"> view all </a>
+                                <a href="projects.html">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                                        <path d="M224 416c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L224 338.8l169.4-169.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-192 192C240.4 412.9 232.2 416 224 416z"/>
+                                    </svg>
+                                </a>
+                                    
+                            </div>
+                        </div>
+                        
                         <div class="project__wrapper">
                             <div class="project__nszu project__content">
                                 <div class="project__img">
@@ -136,20 +149,32 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="project__more-projects more-btn">
+                        <!-- <div class="project__more-projects more-btn">
                             <a href="projects.html" class="more-btn-text">See More Projects</a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
                 <div class="page__about-us scroll-section" id="page__about-us">
                     <div class="section-wrapper about-us">
 
+                        <div class="section__title">
+                            <h2 class="title">Team</h2>
+                            <div class="icon">
+                                <a href="about_us.html" class="title__more-btn"> more </a>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                                    <path d="M224 416c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L224 338.8l169.4-169.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-192 192C240.4 412.9 232.2 416 224 416z"/>
+                                </svg>
+
+                            </div>
+
+                        </div>
+
                         <div include-html="HTML-snippets/team.html"></div> 
 
-                        <div class="project__more-projects more-btn">
-                            <a href="about_us.html" class="more-btn-text">About us</a>
-                        </div>                       
+                        <!-- <div class="project__more-projects more-btn">
+                            <a href="about_us.html" class="more-btn-text">About us</a>                            
+                        </div>                        -->
                     </div>
                 </div>
                 <!-- <div include-html="HTML-snippets/team.html"></div> -->
