--- a/projects.html
+++ b/projects.html
@@ -82,13 +82,13 @@
                         </div>
                         <nav class=" filter__navigation">
                             <ul class="filter__navigation-list">
-                                <li data-filter="all projects" class="filter__btn filter__all"> All projects </li>
-                                <li data-filter="educcation" class="filter__btn filter__educcation"> Education </li>
-                                <li data-filter="offices" class="filter__btn filter__offices"> Offices </li>
-                                <li data-filter="residential" class="filter__btn filter__residential"> Residential </li>
-                                <li data-filter="resort" class="filter__btn filter__resort"> Resort </li>
-                                <li data-filter="interrior" class="filter__btn filter__interrior"> Interior </li>
-                                <li data-filter="urban" class="filter__btn filter__urban"> Urban </li>
+                                <li data-filter="all projects" class="filter__btn filter__all"> All projects </li> <span></span>
+                                <li data-filter="educcation" class="filter__btn filter__educcation"> Education </li> <span></span>
+                                <li data-filter="offices" class="filter__btn filter__offices"> Offices </li> <span></span>
+                                <li data-filter="residential" class="filter__btn filter__residential"> Residential </li> <span></span>
+                                <li data-filter="resort" class="filter__btn filter__resort"> Resort </li> <span></span>
+                                <li data-filter="interrior" class="filter__btn filter__interrior"> Interior </li> <span></span>
+                                <li data-filter="urban" class="filter__btn filter__urban"> Urban </li> <span></span>
                                 <li data-filter="healhcare" class="filter__btn filter__healhcare"> Healthcare</li>
                             </ul>
                         </nav>
@@ -96,7 +96,7 @@
                 </div>
 
                 <div class="page__projects">
-                    <div class="section-wrapper" id="project__wrapper">
+                    <div class="section-wrapper" id="project__wrapper">                        
                         <div class="project__wrapper">
                             <div class="project__nszu project__content offices">
                                 <div class="project__img">
