Add buttons in lending back

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
                 <div class="page__projects scroll-section" id="page__projects">
                     <div class="section-wrapper" >
-                        <div class="section__title">
+                        <!-- <div class="section__title">
                             <h2 class="title">Projects</h2>
                             <div class="icon">
                                 <a href="projects.html" class="title__more-btn"> view all </a>
@@ -85,7 +85,7 @@
                                 </a>
                                     
                             </div>
-                        </div>
+                        </div> -->
                         
                         <div class="project__wrapper">
                             <div class="project__nszu project__content">
@@ -149,16 +149,16 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class="project__more-projects more-btn">
+                        <div class="project__more-projects more-btn">
                             <a href="projects.html" class="more-btn-text">See More Projects</a>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
 
                 <div class="page__about-us scroll-section" id="page__about-us">
                     <div class="section-wrapper about-us">
 
-                        <div class="section__title">
+                        <!-- <div class="section__title">
                             <h2 class="title">Team</h2>
                             <div class="icon">
                                 <a href="about_us.html" class="title__more-btn"> more </a>
@@ -168,13 +168,13 @@
 
                             </div>
 
-                        </div>
+                        </div> -->
 
                         <div include-html="HTML-snippets/team.html"></div> 
 
-                        <!-- <div class="project__more-projects more-btn">
+                        <div class="project__more-projects more-btn">
                             <a href="about_us.html" class="more-btn-text">About us</a>                            
-                        </div>                        -->
+                        </div>                       
                     </div>
                 </div>
                 <!-- <div include-html="HTML-snippets/team.html"></div> -->
