--- a/projects.html
+++ b/projects.html
@@ -15,8 +15,9 @@
     <link rel="icon" type="image/png" href="assets/images/projects/00_general/logo_new.png">
     <script src="assets/js/snippets_html.js"></script>
 </head>
-<body class="no-scroll-y">
-    <div class="preloader">
+<body>
+<!-- <body class="no-scroll-y"> -->
+    <!-- <div class="preloader">
         <div id="preloader__loader">
             <svg width="274" height="275" viewBox="0 0 274 275" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g>
@@ -28,11 +29,7 @@
             </svg>   
         </div>
         
-        <!-- <div id="preloader__content">
-            <img src="assets/pic/00_general/logo_black.svg" class="content-logo-pic" alt="">
-            <h1 class="content-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1>
-        </div> -->
-    </div>
+    </div> -->
 
     <main class="page__main">
         <header class="page__header" id="page__header"> 
