Add links in lending projects

--- a/index.html
+++ b/index.html
@@ -111,62 +111,62 @@
                         <div class="project__wrapper">
                             <div class="project__nszu project__content">
                                 <div class="project__img">
-                                    <img src="assets/pic/01_nszu/front-nszu.jpg" class="project__photo-hover">
-                                    <img src="assets/pic/01_nszu/front-nszu-bw.jpg" class="project__photo">
+                                    <a href="each-projects-page/nszu.html"><img src="assets/pic/01_nszu/front-nszu.jpg" class="project__photo-hover"></a>
+                                    <a href="each-projects-page/nszu.html"><img src="assets/pic/01_nszu/front-nszu-bw.jpg" class="project__photo"></a>
                                 </div>                                
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <p class="project__text"> National Health Service of Ukraine </p>
+                                    <a href="each-projects-page/nszu.html"><p class="project__text"> National Health Service of Ukraine </p></a>
                                 </div>
                             </div>
                             <div class="project__leleka project__content">
                                 <div class="project__img">
-                                    <img src="assets/pic/02_leleka/front-leleka.jpg" class="project__photo-hover">
-                                    <img src="assets/pic/02_leleka/front-leleka-bw.jpg" class="project__photo">
+                                    <a href=""><img src="assets/pic/02_leleka/front-leleka.jpg" class="project__photo-hover"></a>
+                                    <a href=""><img src="assets/pic/02_leleka/front-leleka-bw.jpg" class="project__photo"></a>
                                 </div>   
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <p class="project__text"> Maternityhouse "Leleka"  </p>
+                                    <a href=""><p class="project__text"> Maternityhouse "Leleka"  </p></a>
                                 </div>
                             </div>
                             <div class="project__aquapark project__content">
                                 <div class="project__img">
-                                    <img src="assets/pic/03_aquapark/front-quapark.jpg" class="project__photo-hover">
-                                    <img src="assets/pic/03_aquapark/front-aquapark-bw.jpg" class="project__photo">
+                                    <a href=""><img src="assets/pic/03_aquapark/front-quapark.jpg" class="project__photo-hover"></a>
+                                    <a href=""><img src="assets/pic/03_aquapark/front-aquapark-bw.jpg" class="project__photo"></a>
                                 </div>  
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <p class="project__text"> Aquapark </p>
+                                    <a href=""><p class="project__text"> Aquapark </p></a>
                                 </div>
                             </div>
                             <div class="project__brovary project__content">
                                 <div class="project__img">
-                                    <img src="assets/pic/04_school/front-school.jpg" class="project__photo-hover">
-                                    <img src="assets/pic/04_school/front-school-bw.jpg" class="project__photo">
+                                    <a href=""><img src="assets/pic/04_school/front-school.jpg" class="project__photo-hover"></a>
+                                    <a href=""><img src="assets/pic/04_school/front-school-bw.jpg" class="project__photo"></a>
                                 </div>   
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <p class="project__text"> Secondary school </p>
+                                    <a href=""><p class="project__text"> Secondary school </p></a>
                                 </div>
                             </div>
                             <div class="project__nova-kakhovka project__content">
                                 <div class="project__img">
-                                    <img src="assets/pic/05_nova_kakhovka/front-cnap.jpg" class="project__photo-hover">
-                                    <img src="assets/pic/05_nova_kakhovka/front-cnap-bw.jpg" class="project__photo">
+                                    <a href=""><img src="assets/pic/05_nova_kakhovka/front-cnap.jpg" class="project__photo-hover"></a>
+                                    <a href=""><img src="assets/pic/05_nova_kakhovka/front-cnap-bw.jpg" class="project__photo"></a>
                                 </div> 
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <p class="project__text"> Center of Administrative Services </p>
+                                    <a href=""><p class="project__text"> Center of Administrative Services </p></a>
                                 </div>
                             </div>
                             <div class="project__zirochka project__content">
                                 <div class="project__img">
-                                    <img src="assets/pic/06_kindergarten_zirochka/front-zirochka.jpg" class="project__photo-hover">
-                                    <img src="assets/pic/06_kindergarten_zirochka/front-zirochka-bw.jpg" class="project__photo">
+                                    <a href=""><img src="assets/pic/06_kindergarten_zirochka/front-zirochka.jpg" class="project__photo-hover"></a>
+                                    <a href=""><img src="assets/pic/06_kindergarten_zirochka/front-zirochka-bw.jpg" class="project__photo"></a>
                                 </div>    
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <p class="project__text"> Kindergarten "Zyrochka" </p>
+                                    <a href=""><p class="project__text"> Kindergarten "Zyrochka" </p></a>
                                 </div>
                             </div>
                         </div>
